# MetETL

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: to_download.json
scripts/: api.py  artwork.py  async_pipeline.py  data_analysis.py  decorators.py  image_processing.py  image_processor.py
scripts/data_analysis/: analysis_core.py  analysis_metrics.py  main.py  processor.py  visual.py
src/akimovcode/: __main__.py  cli.py  logging_config.py
src/akimovcode/analysis/: __init__.py  visual.py
src/akimovcode/images/: api.py  artwork.py  image_processing.py  image_processor.py
tests/: test_artwork.py  test_processor.py
